<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_scrolling"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kerk12.BusinessCard.BusinessCardMain">

    <!--
        The picture was taken from pexels.com
        https://www.pexels.com/photo/store-with-red-and-white-stripe-awnings-196410/
        Credits: Unsplash.com
    -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".75"
        android:src="@drawable/coffee_shop"
        android:scaleType="centerCrop"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingLeft="@dimen/padding_left_right"
        android:paddingRight="@dimen/padding_left_right"
        android:paddingTop="@dimen/padding_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="@dimen/DescriptionTextSize"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:autoLink="map"/>
        <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:drawableLeft="@drawable/phone"
            style="@style/TextView_With_Drawable"
            android:autoLink="phone"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/website"
            android:drawableLeft="@drawable/web"
            style="@style/TextView_With_Drawable"
            android:autoLink="web"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/opening_hours"
            style="@style/TextView_With_Drawable"
            android:text="@string/opening_hours"/>
    </LinearLayout>

    <Button
        android:text="@string/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:id="@+id/email_button" />
</LinearLayout>
